objects/Portal_Tab_Access__c.object
<CustomObject>
    <fields>
        <fullName>Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnkey_Incident_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turnkey Incident Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnkey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Turnkey tab</description>
        <label>Turnkey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_by_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update by Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Access_setup__c</fullName>
        <description>IF( ispickval($Profile.UserType, &apos;Standard&apos;) ,HYPERLINK(  $Label.Base_URL &amp;&apos;/&apos; &amp; Id, User__r.FirstName &amp;&apos; &apos;&amp; User__r.FirstName),HYPERLINK(&apos;/GlobalfoundryView/&apos; &amp; Id, User__r.FirstName &amp;&apos; &apos;&amp; User__r.FirstName))</description>
        <formula>IF( ispickval($Profile.UserType, &apos;Standard&apos;) ,HYPERLINK(  $Label.Base_URL &amp;&apos;/&apos; &amp; Id, User__r.Contact.FirstName &amp;&apos; &apos;&amp; User__r.Contact.LastName),HYPERLINK(&apos;/GlobalfoundryView/&apos; &amp; Id, User__r.Contact.FirstName &amp;&apos; &apos;&amp; User__r.Contact.LastName))</formula>
        <label>Community User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2 : look up to user object</description>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please Select Customer Portal User</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Customer Portal Admin,Customer Portal Profile,Reseller Portal Admin,Reseller Portal Profile,Supplier Portal Admin,Supplier Portal Profile,Enablement Partner Portal Admin,Enablement Partner Portal Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Tab_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WIP_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on WIP Status tab</description>
        <label>WIP Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WLR_Monitoring_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on WLR Monitoring report tab</description>
        <label>WLR Monitoring report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Disposition_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related Supplier Services</description>
        <label>Wafer Disposition System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Wafer Inspection tab</description>
        <label>Wafer Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Scrap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Wafer Scrap tab</description>
        <label>Wafer Scrap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Sort_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wafer Sort Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Wafer Start tab</description>
        <label>Wafer Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Web View tab</description>
        <label>Web View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on 3rd Party IP tab</description>
        <label>3rd Party IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yield_Calculator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yield Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yield_Sort_ETest_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2 : Shows the visibility of Portal user on Yield (Sort/ETest) Reporting tab</description>
        <label>Yield (Sort/ETest) Reporting</label>
        <type>Checkbox</type>
    </fields>
    <label>Access Setup</label>
    <listViews>
        <fullName>Access_Set_Up_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>User__c</columns>
        <columns>User_Access_setup__c</columns>
        <columns>PCRB__c</columns>
        <columns>PTRF__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Access Set Up View</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PCRB</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>PCRB__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCRB__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PCRB Only</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MDD_Part_Search</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>MDD_Parts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MDD_Parts__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MDD Part Search</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Devices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>PCRB__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Devices__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Devices</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Reticle</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Reticle_Obsolescence__c</columns>
        <columns>My_Reticles_Read_Only__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reticle_Obsolescence__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>My_Reticles_Read_Only__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Reticle</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Access Setup No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Setup</pluralLabel>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <label>Supplier</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Supplier_App_Access_Validation</fullName>
        <active>true</active>
        <description>This validation prevents any accidental Tab access grant to a Supplier user.</description>
        <errorConditionFormula>AND(OR(User__r.Profile.Name  =  $Label.SupplierPortalProfile , User__r.Profile.Name  =  $Label.SupplierPortalAdmin ),OR( My_Devices__c , My_Wafers__c , PDK_Design_Documents__c , Product_Services__c ))</errorConditionFormula>
        <errorMessage>Supplier Users cannot be assigned non-supplier applications. Please select from Supplier Service related links only.</errorMessage>
    </validationRules>
</CustomObject>